--- a/static/misc/slimerancher/index copy.html
+++ b/static/misc/slimerancher/index copy.html
@@ -10,19 +10,19 @@ i just edited it a bit to make it better for gn-math
     <base href="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/">
     <meta charset="utf-8">
     <title>Slime Rancher Decompiled v0.2.1</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
+    <link rel="shortcut icon" href="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/TemplateData/favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/TemplateData/style.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js"></script>
-    <script src="TemplateData/UnityProgress.js"></script>
-    <script src="Build/UnityLoader.js"></script>
-    <script src="mobile-controls.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/TemplateData/UnityProgress.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/Build/UnityLoader.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/mobile-controls.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div class="webgl-content">
         <div class="bg">
-            <img class="bg" src="TemplateData/loading_bg.png"
+            <img class="bg" src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/TemplateData/loading_bg.png"
                 style="width: 100%; height: 100%; padding: 0px; margin: 0px; border: 0px; position: absolute;">
         </div>
         <div id="loading-text"
@@ -30,8 +30,8 @@ i just edited it a bit to make it better for gn-math
             LOADING...</div>
         <div id="gameContainer" style="width: 960px; height: 600px"></div>
     </div>
-    <script src="TemplateData/responsive.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main/TemplateData/responsive.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/web-ports/slime-ranchers@main//assets/js/script.js"></script>
 </body>
 <script>
     const ogxhr = window.XMLHttpRequest;
