--- a/static/misc/vex6/index.html
+++ b/static/misc/vex6/index.html
@@ -2,6 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
+  <base href="https://raw.githubusercontent.com/55gms/55GMS/refs/heads/main/static/misc/vex7/">
   <meta charset="utf-8" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta id="viewport" name="viewport"
